--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>New title</title>
   </head>
   <body>
-  
+  <h1> quête Remote </h1>
   </body>
 </html>
